# Hexagonal_Cellular_Automata

./: CMakeLists.txt  README.md  Timer.cpp  base.cpp  cell.cpp  game_of_life  kernel.cl  main.cpp  makefile  omp.cpp  openCl.cpp  openmp.cpp  result.txt  sequential.cpp  serial.cpp
